--- a/index.html
+++ b/index.html
@@ -58,12 +58,13 @@
         <script src="./resources/ol-layerswitcher.js"></script>
         <script src="./resources/photon-geocoder-autocomplete.min.js"></script>
         <script src="./resources/layers/__0.js"></script><script src="./resources/layers/__1.js"></script><script src="./resources/layers/cityFDP_2.js"></script><script src="./resources/layers/guodao_3.js"></script>
-        <script src="styles/__0_style.js"></script><script src="styles/__1_style.js"></script><script src="styles/cityFDP_2_style.js"></script><script src="styles/guodao_3_style.js"></script>
+        <script src="./resources/styles/__0_style.js"></script><script src="./resources/styles/__1_style.js"></script><script src="./resources/styles/cityFDP_2_style.js"></script><script src="./resources/styles/guodao_3_style.js"></script>
         <script src="./resources/layers/layers.js" type="text/javascript"></script> 
         <script src="./resources/Autolinker.min.js"></script>
         <script src="./resources/qgis2web.js"></script>        
     </body>
 </html>
+
 
 
 
