--- a/index.html
+++ b/index.html
@@ -44,20 +44,30 @@
             <div id="popup-content"></div>
         </div>
     </div>
+
+    <!-- 核心依赖 JS -->
     <script src="/qgis-web-map/resources/qgis2web_expressions.js"></script>
     <script src="/qgis-web-map/resources/functions.js"></script>
     <script src="/qgis-web-map/resources/ol.js"></script>
     <script src="/qgis-web-map/resources/ol-layerswitcher.js"></script>
     <script src="/qgis-web-map/resources/photon-geocoder-autocomplete.min.js"></script>
-    <script src="/qgis-web-map/layers/__0.js"></script>
-    <script src="/qgis-web-map/layers/__1.js"></script>
-    <script src="/qgis-web-map/layers/cityFDP_2.js"></script>
-    <script src="/qgis-web-map/layers/guodao_3.js"></script>
-    <script src="/qgis-web-map/legend/__0_style.js"></script>
-    <script src="/qgis-web-map/legend/__1_style.js"></script>
-    <script src="/qgis-web-map/legend/cityFDP_2_style.js"></script>
-    <script src="/qgis-web-map/legend/guodao_3_style.js"></script>
-    <script src="/qgis-web-map/layers/layers.js" type="text/javascript"></script>
+
+    <!-- 图层 JS 文件（仓库根目录） -->
+    <script src="/qgis-web-map/__0.js"></script>
+    <script src="/qgis-web-map/__1.js"></script>
+    <script src="/qgis-web-map/cityFDP_2.js"></script>
+    <script src="/qgis-web-map/guodao_3.js"></script>
+
+    <!-- 样式 JS 文件（仓库根目录） -->
+    <script src="/qgis-web-map/__0_style.js"></script>
+    <script src="/qgis-web-map/__1_style.js"></script>
+    <script src="/qgis-web-map/cityFDP_2_style.js"></script>
+    <script src="/qgis-web-map/guodao_3_style.js"></script>
+
+    <!-- 图层配置文件 -->
+    <script src="/qgis-web-map/layers.js" type="text/javascript"></script>
+
+    <!-- 其他依赖 JS -->
     <script src="/qgis-web-map/resources/Autolinker.min.js"></script>
     <script src="/qgis-web-map/resources/qgis2web.js"></script>
 </body>
